<resources>
    <string name="app_name">CatalogueMovie</string>
    <string name="desk_screen">gambar logo</string>
    <string name="findIt">Find</string>
    <string name="movie_title">Movie Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="disini_judul">disini judul</string>
    <string name="poster">poster</string>
    <string name="tanggal">29–10–2017</string>
    <string name="overview">Overview</string>
    <string name="overview_content">Overview Content</string>
    <string name="title_activity_navigation">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kalong (Katalog Movie Ngabest)</string>
    <string name="nav_header_subtitle">Realth99@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="search">search</string>
    <string name="search_hint">Title Movie</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="home">Home</string>

    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Up Coming</string>
    <string name="image_movie">image movie</string>
    <string name="favorite">favorite</string>
    <string name="image_poster">Image Poster</string>
    <string name="desc_about">You are looking for an interesting movie in the theater and start looking for it, but you will be late, will you go to work or to a place or to an important meeting? Without panic: Bats are the solution for you! Find a list of \'Movies to watch\' in the application, and from there you can find them at any time: at night, on weekends, during leisure time, alone and with friends.</string>
</resources>
