<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imgposter"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:contentDescription="@string/poster" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textSize="18sp" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/TxtOverviewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/overview_content" />

    </LinearLayout>
</ScrollView>