<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cv_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg3"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_movie"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@mipmap/ic_launcher2_round"
            tools:ignore="RtlHardcoded"
            tools:src="@color/colorAccent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            android:layout_toRightOf="@id/img_poster"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_poster"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded"
            tools:text="Title" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_poster"
            android:layout_toRightOf="@id/img_poster"
            android:maxLines="2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_poster"
            card_view:layout_constraintTop_toBottomOf="@+id/txtTitle"
            tools:ignore="RtlHardcoded"
            tools:text="Overview" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescription"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_poster"
            android:layout_toRightOf="@+id/img_poster"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:maxLines="1"
            card_view:layout_constraintStart_toEndOf="@+id/img_poster"
            card_view:layout_constraintTop_toBottomOf="@+id/txtDescription"
            tools:ignore="RtlHardcoded"
            tools:text="Date" />

        <LinearLayout
            android:layout_width="142dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/txtDate"
            card_view:layout_constraintTop_toBottomOf="@+id/txtDescription">

            <Button
                android:id="@+id/btnFavorit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/btnShare"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>